--- a/04-local-server/src/style.css
+++ b/04-local-server/src/style.css
@@ -1,7 +1,20 @@
-html{
-    height: 100%;
-}
-body {
+html {
     height: 100%;
 }
 
+body {
+    height: 100%;
+    display: flex;
+    margin: 0;
+}
+
+.random {
+    width: 40vw;
+    background-color: beige;
+    min-width: 300px;
+}
+
+.flex-container {
+    background-color: aquamarine;
+    flex: 1;
+}
